repair login popup to work on small width screens

--- a/frontend/src/components/LoginForm.scss
+++ b/frontend/src/components/LoginForm.scss
@@ -1,5 +1,4 @@
 
-
 .form-box form{
     width: 100%;
 }
@@ -125,11 +124,11 @@ body {
 }
 
 .form-block {
+    width: 100%;
+    height: 100%;
     position: relative;
-    width: 330px;
     padding: 25px;
     background: rgba(255, 255, 255, .13);
-    border-radius: $borderRadius;
     color: #fff;
     @include box-shadow(0px 0px 16px 9px rgba(0,0,0,0.07));
 }
@@ -150,6 +149,9 @@ body {
         font-size: 13px;
         font-weight: 300;
         color: rgba(255,255,255,.65);
+        @media (max-width: 340px) {
+            white-space: normal !important; 
+          }
     }
 }
 
@@ -410,6 +412,8 @@ input[type="checkbox"] {
 }
 
 .login-form {
+    width: 100%;
+    height: 100%;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -435,4 +439,23 @@ input[type="checkbox"] {
     max-width: 400px;
     display: flex;
     justify-content: center;
+}
+
+.close-button-div{
+    background-color: rgba(255, 255, 255, 0.13);
+}
+.close-button{
+    background-color: rgba(255, 255, 255, 0.13);
+    color: white;
+    font-size: large;
+    font-weight: bold;
+    width: calc($borderRadius*2);
+    height: calc($borderRadius*2);
+    border-radius: $borderRadius;
+    transition: background-color 0.3s, color 0.3s;
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.5); /* Change background color on hover */
+        color: darkred; /* Change text color on hover */
+        /* You can add more hover styles or animations here */
+      }
 }
